<resources>
    <string name="app_name">Start Lab</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorite</string>

    <string-array name="lorem_array">
        <item>Earth</item>
        <item>Uno lorem ipsum dolor sit ame</item>
        <item>Dos in vel agam sale meliore"</item>
        <item>Tres democritum incorrupte vi</item>
        <item>Quatro Lorem ipsum dolor sit </item>
        <item>Tinco in vel agam sale melior</item>
        <item>Ses democritum incorrupte vim</item>
        <item>Set lorem ipsum dolor sit ame</item>
        <item>Ocho in vel agam sale meliore</item>
        <item>Nueve democritum incorrupte v</item>
        <item>Dess lorem ipsum dolor sit am</item>
        <item>Onche in vel agam sale melior</item>
        <item>Ocho in vel agam sale meliore</item>
        <item>Nueve democritum incorrupte v</item>
        <item>Mercury</item>
        <item>Dess lorem ipsum dolor sit am</item>
        <item>Onche in vel agam sale melior</item>
        <item>Ocho in vel agam sale meliore</item>
        <item>Nueve democritum incorrupte v</item>
        <item>Dess lorem ipsum dolor sit am</item>
        <item>Onche in vel agam sale melior</item>
        <item>Doce democritum incorrupte vi</item>
        <item>Venus</item>
        <item>Uno lorem ipsum dolor sit ame</item>
        <item>Dos in vel agam sale meliore"</item>
        <item>Tres democritum incorrupte vi</item>
        <item>Quatro Lorem ipsum dolor sit </item>
        <item>Tinco in vel agam sale melior</item>
        <item>Ses democritum incorrupte vim</item>
        <item>Set lorem ipsum dolor sit ame</item>
        <item>Ocho in vel agam sale meliore</item>
        <item>Nueve democritum incorrupte v</item>
        <item>Dess lorem ipsum dolor sit am</item>
        <item>Onche in vel agam sale melior</item>
        <item>Ocho in vel agam sale meliore</item>
        <item>Nueve democritum incorrupte v</item>
        <item>Dess lorem ipsum dolor sit am</item>
        <item>Onche in vel agam sale melior</item>
        <item>Ocho in vel agam sale meliore</item>
        <item>Nueve democritum incorrupte v</item>
        <item>Dess lorem ipsum dolor sit am</item>
        <item>Onche in vel agam sale melior</item>
        <item>Doce democritum incorrupte vi</item>
        <item>Mars</item>
    </string-array>

</resources>
